--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,7 @@ h1 {
 
 .question {
     font-family: WorkSans-SemiBold;
+    margin: 10px;
 }
 
 .question p {
@@ -26,10 +27,20 @@ h1 {
 }
 
 .faqcontainer {
-    display: flex;
+  position: absolute; /* or fixed */
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border: 2px solid black;
+  border-radius: 10px;
+  padding: 20px;
+  max-width: 400px;
+  min-height: 250px;
+    
+    /*display: flex;
     flex-direction: column;
     justify-content: center;
     border: 2px solid black;
     padding: 50px;
-    max-width: 450px;
+    max-width: 450px;*/
 }
