--- a/styles.css
+++ b/styles.css
@@ -13,13 +13,34 @@
     src: url(assets/fonts/static/WorkSans-SemiBold.ttf) format("truetype");
 }
 
+.background {
+    display: block;
+    /*This needs work*/
+}
+
 h1 {
     font-family: WorkSans-Bold;
+    display:flex;
+}
+
+.faqcontainer img {
+    margin-right: 15px;
 }
 
 .question {
     font-family: WorkSans-SemiBold;
-    margin: 10px;
+    padding: 10px;
+    font-size: 12px;
+    border-bottom: 0.5px solid wheat;
+}
+
+.question details summary {
+    list-style: none;
+}
+
+.question details summary img {
+    vertical-align: middle;
+    ;
 }
 
 .question p {
@@ -32,15 +53,14 @@ h1 {
   left: 50%;
   transform: translate(-50%, -50%);
   border: 2px solid black;
+  background-color: white;
   border-radius: 10px;
   padding: 20px;
   max-width: 400px;
-  min-height: 250px;
-    
-    /*display: flex;
-    flex-direction: column;
-    justify-content: center;
-    border: 2px solid black;
-    padding: 50px;
-    max-width: 450px;*/
+  min-height: 200px;
+}
+
+.attribution {
+    position: absolute;
+    bottom: 5%;
 }
